<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/large_intrinsic_padding"
    android:paddingTop="@dimen/large_intrinsic_padding">

    <com.rovas.forgram.fogram.Utils.Views.CircularImageView
        android:id="@+id/Comments_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_profile_holder"
        app:shadow="false"
        app:border="true"
        app:border_width="0dp" />

    <com.rovas.forgram.fogram.Utils.Views.ExpandableTextView
        android:id="@+id/commentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/Comments_image"
        android:layout_toRightOf="@+id/Comments_image"
        expandableTextView:animAlphaStart="1"
        expandableTextView:animDuration="200"
        expandableTextView:collapseText="@string/collapse_text_label"
        expandableTextView:expandText="@string/expand_text_label"
        expandableTextView:maxCollapsedLines="3">

        <TextView
            android:id="@+id/Comments_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:ellipsize="end"
            android:textAppearance="@style/TextAppearance.Second" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="@dimen/small_intrinsic_padding">

            <LinearLayout
                android:id="@+id/comments_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/watchersContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/intrinsic_padding"
                    android:paddingBottom="@dimen/intrinsic_padding"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/comment_time_stamp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/just_now"
                        android:textAppearance="@style/TextAppearance.Second.Light" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/likesContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/intrinsic_padding"
                    android:paddingBottom="@dimen/intrinsic_padding"
                    android:paddingStart="@dimen/intrinsic_padding"
                    android:paddingLeft="@dimen/intrinsic_padding"
                    android:paddingEnd="@dimen/intrinsic_padding"
                    android:paddingRight="@dimen/intrinsic_padding"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/comment_like"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/like_btn"
                        android:textColor="@color/text_color"
                        android:textAppearance="@style/TextAppearance.Second.Light" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/commentsCounterContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/intrinsic_padding"
                    android:paddingBottom="@dimen/intrinsic_padding"
                    android:paddingStart="@dimen/intrinsic_padding"
                    android:paddingLeft="@dimen/intrinsic_padding"
                    android:paddingEnd="@dimen/intrinsic_padding"
                    android:paddingRight="@dimen/intrinsic_padding"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/comment_reply"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reply"
                        android:textAppearance="@style/TextAppearance.Second.Light" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/likesCountContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/intrinsic_padding"
                    android:paddingBottom="@dimen/intrinsic_padding"
                    android:paddingStart="@dimen/intrinsic_padding"
                    android:paddingLeft="@dimen/intrinsic_padding"
                    android:paddingEnd="@dimen/intrinsic_padding"
                    android:paddingRight="@dimen/intrinsic_padding"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/comment_like_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/likes_count"
                        android:textColor="@color/text_color"
                        android:textAppearance="@style/TextAppearance.Second.Light" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/commentsCounterCContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/intrinsic_padding"
                    android:paddingBottom="@dimen/intrinsic_padding"
                    android:paddingStart="@dimen/intrinsic_padding"
                    android:paddingLeft="@dimen/intrinsic_padding"
                    android:paddingEnd="@dimen/intrinsic_padding"
                    android:paddingRight="@dimen/intrinsic_padding"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/comment_reply_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/comment_count"
                        android:textAppearance="@style/TextAppearance.Second.Light" />

                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/Comments_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:autoLink="web"
                android:textAppearance="@style/TextAppearance.Second.Light" />

        </RelativeLayout>

    </com.rovas.forgram.fogram.Utils.Views.ExpandableTextView>



</RelativeLayout>